fixed footer alignment and colors

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1030,8 +1030,12 @@ margin-top:3px;
 footer{
   background-color: #F7F7F7;
   color: #858585;
-  padding: 50px 20px 100px 20px;
   text-decoration: none;
+  text-align: center;
+}
+footer img{
+  margin: 60px auto 0;
+  height: 50px;
 }
 .copyright{
   font-size: 0.875rem;
@@ -1039,16 +1043,37 @@ footer{
   margin-bottom: 30px;
 }
 .footer-nav{
+  margin-top: 30px;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.footer-nav_column-center{
+  margin:0 30px;
+}
+.social-links{
+  display:inline-block;
+}
+.social-links a{
   text-decoration: none;
+  color: #227F7E;
+}
+.social-links a:hover{
+  text-decoration: none;
+  color: #227F7E;
+}
+.legal-links{
+  padding-bottom: 60px;
 }
 footer ul{
+  padding: 0;
   list-style: none;
 }
-footer ul li a{
+footer ul li a, footer .legal-links a{
   text-decoration: none;
   color: #858585;
 }
-footer ul li a:hover{
+footer ul li a:hover, footer .legal-links a:hover{
   text-decoration: none;
   color: #858585;
 }
